fix: z-index overlaps

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -46,7 +46,7 @@
     content: '';
     top: 0;
     left: 0;
-    z-index: 4;
+    z-index: 2;
     height: 100%;
     width: 100%;
     background: linear-gradient(
